ss - fix lyrics cut off

--- a/src/page-singer-songwriter/singer-songwriter.scss
+++ b/src/page-singer-songwriter/singer-songwriter.scss
@@ -274,6 +274,7 @@ body {
   height: 0;
   overflow: hidden;
   padding-right: 2rem;
+  white-space: normal;
 }
 
 .lyrics-hr {
